--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ nav {
 	height: 50%;
 	width: 15%;
 	padding: 5px 10px;
-	background-color: #E3DDD0;
+	background-color: red;
 	color: black;
 	font-family: serif;
 
