--- a/index.css
+++ b/index.css
@@ -1,5 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Cormorant+Garamond&display=swap');
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 
+html{
+	width: 100%;
+	height: 100%;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+body{
+	width: 100%;
+	height: 100%;
+	
+}
 h1 {
 	font-family: Asap Condensed, sans-serif;
 }
@@ -21,7 +37,7 @@ nav {
 	height: 50%;
 	width: 15%;
 	padding: 5px 10px;
-	background-color: red;
+	background-color: purple ;
 	color: black;
 	font-family: serif;
 
