--- a/index.css
+++ b/index.css
@@ -23,7 +23,13 @@ h1 {
 p {
 	font-family: Cormorant Garamond, serif;
 }
-
+div#container1{
+	height: 100vh;
+	width: 70%;
+	margin-left: 20%;
+	background-color: white;
+	padding: 5px 10px;
+}
 div#container{
 	height: 100vh;
 	width: 70%;
@@ -37,7 +43,7 @@ nav {
 	height: 50%;
 	width: 15%;
 	padding: 5px 10px;
-	background-color: purple ;
+	background-color: #E3DDD0 ;
 	color: black;
 	font-family: serif;
 
