--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ nav {
 	height: 50%;
 	width: 15%;
 	padding: 5px 10px;
-	background-color: blue ;
+	background-color: #E1DAC9;
 	color: black;
 	font-family: serif;
 
