--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Cormorant+Garamond&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Asap+Condensed&family=Cormorant&family=IM+Fell+French+Canon+SC&family=swap');
+</style>
 *{
 	margin: 0;
 	padding: 0;
@@ -21,7 +22,7 @@ h1 {
 }
 
 p {
-	font-family: Cormorant Garamond, serif;
+	font-family: Cormorant, serif;
 }
 
 div#container{
@@ -39,7 +40,7 @@ nav {
 	padding: 5px 10px;
 	background-color: #E1DAC9;
 	color: black;
-	font-family: serif;
+	font-family: IM Fell French Canon SC, serif;
 
 }
 		
