--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Asap+Condensed&family=Cormorant&family=IM+Fell+French+Canon+SC&family=swap');
-</style>
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Viga&display=Cormorant+Garamond&display=swap');
 *{
 	margin: 0;
 	padding: 0;
@@ -10,43 +9,159 @@ html{
 	width: 100%;
 	height: 100%;
 	overflow-x: hidden;
-	overflow-y: auto;
+	overflow-y: scroll;
 }
 body{
+	position: absolute;
+	overflow-y: scroll;
 	width: 100%;
 	height: 100%;
 	
 }
+
 h1 {
 	font-family: Asap Condensed, sans-serif;
 }
 
 p {
-	font-family: Cormorant, serif;
+	font-family: Cormorant Garamond, serif;
+}
+
+h2 {
+	font-size: 3vh;
+	padding:10px 0;
+	font-family:  Cormorant Garamond, serif;
+}
+
+.banner {
+	position: fixed;
+	width: 100%;
+	padding:20px 0;
+	text-align: center;
+	background-color: black;
+	color: white;
+
 }
 
 div#container{
-	height: 100vh;
+	position: fixed;
+	text-align: center;
+	height: 100%;
+	width:85%;
+	margin-left: 15%;
+	margin-top: 7%;
+	background-color: #C4D5D1;
+	color: black;
+	padding: 30px 40px;
+	font-size: 3vh;
+	font-family: 'Viga', sans-serif;
+}
+div#container2 {
+	position: fixed;
+	text-align: center;
+	height: 100%;
+	width:85%;
+	margin-left: 15%;
+	margin-top: 7%;
+	background-color: #F4F2EC;
+	color: black;
+	padding: 40px 40px;
+	font-family: sans-serif;
+}
+
+div#home{
+	text-align: center;
+	height: 50%;
+	width: 30%;
+	margin-left: 20%;
+	margin-top: 8%;
+
+}
+
+div#home2{
+	text-align: center;
+	height: 50%;
+	width: 30%;
+	margin-left: 20%;
+	margin-top: 3%;
+
+}
+
+div#home3{
+	text-align: center;
+	height: 50%;
+	width: 30%;
+	margin-left: 20%;
+	margin-top: 3%;
+}
+section#Renaissance{
+	background-color: #0B1A2F;
+	color: white;
+	border: 4px solid #C4D5D1;
+	height: 10%;
 	width: 70%;
 	margin-left: 20%;
-	background-color: white;
-	padding: 5px 10px;
+	margin-top: 10%;
+	text-align: center;
+	padding: 20px 5px;
+	font-size: 4vh;
+	font-family: Cormorant Garamond, serif;
+}
+section#Romanticism{
+	background-color: #0B1A2F;
+	color: white;
+	border: 4px solid #C4D5D1;
+	height: 15%;
+	width: 70%;
+	margin-left: 20%;
+	margin-top: 10%;
+	text-align: center;
+	padding: 20px 5px;
+	font-size: 4vh;
+	font-family: Cormorant Garamond, serif;
+}
+section#modern{
+	background-color: #0B1A2F;
+	color: white;
+	border: 4px solid #C4D5D1;
+	height: 20%;
+	width: 70%;
+	margin-left: 20%;
+	margin-top: 10%;
+	text-align: center;
+	padding: 20px 5px;
+	font-size: 4vh;
+	font-family: Cormorant Garamond, serif;
+}
+
+
+a{
+	color: black;
+	display: block;
+	text-decoration: none;
 }
 
 nav {
 	position: fixed;
-	height: 50%;
+	height: 100%;
 	width: 15%;
 	padding: 5px 10px;
-	background-color: #E1DAC9;
+	background-color: #E3DDD0;
 	color: black;
-	font-family: IM Fell French Canon SC, serif;
+	font-family: serif;
+	font-size: 2.5vh;
 
 }
+
+nav > div {
+	padding: 1vh 0;
+	text-align: center;
+}
+
 		
-nav >div :hover{
+nav > div :hover{
 	background-color: #464135;
 	color: white;
-	width: 100%;
+	border-bottom: 4px solid white;
 
 }
