--- a/index.css
+++ b/index.css
@@ -260,7 +260,11 @@ h4 {
 	font-size: 4.8vh;
 	letter-spacing: 2.4px;
 }
-
+p{
+	font-size: 2.2vh;
+	color: black;
+	font-family: Cormorant Garamond, serif;
+}
 p+p{ /*加寬bio文字兩段paragraph之間的距離*/
 	margin-top: 2vh;
 }
