--- a/renaissance2.css
+++ b/renaissance2.css
@@ -83,12 +83,13 @@ div#line{
 .art12{
 	background-color: #E1E1D7;
 	float: right;
-	height: 70vh;
+	height: 85vh;
 	width: 50vw;
 	padding: 10vh;
 	margin-right:5vw; 
 	font-family: 'Hind Madurai', sans-serif;
 	line-height: 3vh;
+	border-left: 4px solid #FFAC00; 
 }
 
 
